<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tourngen</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="sync">Synchronize</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="new_tournament">New Tournament</string>
    <string name="register">Register</string>
    <string-array name="Tournaments">
        <item >Copa Libertadores 2014-2015</item>
        <item >Liga USFQ VI</item>
        <item >Copa KFC</item>
        <item >VG Night 2015</item>
        <item >Torneo Extra</item>
  
    </string-array>
	
</resources>
